[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
egui = "0.31.0"
env_logger = "0.11.6"
log = "0.4"
pollster = "0.3"
rapier2d = "0.23.0"
rodio = "0.20.1"
wgpu = "24.0.1"
winit = { version = "0.29", features = ["rwh_05"] }
